fix alignment of Invite People sub text

--- a/static/css/tc.gam.main.css
+++ b/static/css/tc.gam.main.css
@@ -3613,7 +3613,7 @@ some_nowhitespace {
     font-weight: bold;
     letter-spacing: 0.15px;
     line-height: 12px;
-    padding-right: 30px;
+    padding-left: 10px;
 }
 
 .box.fresh-ideas > .hint {
